--- a/styles.css
+++ b/styles.css
@@ -48,12 +48,6 @@ h2 {
 
 }
 
-/* #menubar {
-padding: 0px 30px 0px 0px;
-    font-size: large; 
-  }*/
-overflow:focus-visible
-
 #Kontakt { 
     padding: 0px 300px 0px 0px;
     float: right; 
@@ -114,7 +108,7 @@ ul {
   }
 
   .navbar {
-    overflow: hidden;
+
     background-color: #333;
     height: 50px;
     }
@@ -171,4 +165,8 @@ ul {
     
     .dropdown:hover .dropdown-content {
     display: block;
+    }
+
+    .contact {
+float: right
     }
