--- a/yachts/yachts.css
+++ b/yachts/yachts.css
@@ -12,6 +12,7 @@ p {
     text-decoration: underline;
     font-size: x-large;
     
+    
 
   }
 
@@ -117,9 +118,10 @@ float: right
 
 
 #photos img {
-    width: 50%;
+    width: 70%;
 }
 
 #inhalt {
     padding-left: 30px;
+    text-align: center;
 }
