--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,7 @@
 #seite {
-    width:fit-content;
-    font: icon;
-    margin: 0px auto;
-  
+  width: fit-content;
+  font: icon;
+  margin: 0px auto;
 }
 
 #inhalt {
@@ -10,150 +9,143 @@
 }
 
 p {
-    color: black;
-    font-size: large;
-
-  }
+  color: black;
+}
 
 body {
-font: icon;
-  }
+  font: icon;
+}
 
 h1 {
-    color: cornflowerblue;
-    padding-left: 30px;
-    font-size: xx-large;
+  color: cornflowerblue;
+  padding-left: 30px;
+  font-size: xx-large;
 }
 
 h2 {
-    color: royalblue;
-    padding-left: 30px;
-    font-size: x-large;
+  color: royalblue;
+  padding-left: 30px;
+  font-size: x-large;
 }
 
-#contactaddresstext { 
+#contactaddresstext {
   padding: 0px 0px 0px 30px;
 }
 
 #titel p {
-    font-size: 120px;
-    color: blue;
-    font-weight: bold;
-    text-decoration: underline;
-    }
+  font-size: 120px;
+  color: blue;
+  font-weight: bold;
+  text-decoration: underline;
+}
 
 #bild_jim img {
-    width: 250px;
-    float: left;
-    padding-left: 30px;  
-  }
+  width: 250px;
+  float: left;
+  padding-left: 30px;
+}
 
 #bild_pinguin img {
-    width: 600px;
-
+  width: 600px;
 }
 
-#Kontakt { 
-    padding: 0px 300px 0px 0px;
-    float: right; 
+#Kontakt {
+  padding-right: 30px;
+  float: right;
 }
 
-#lebenslauf
-    {
-      padding: 300px 0px 3px 30px;
-    }
+#lebenslauf {
+  padding: 300px 0px 3px 30px;
+}
 
-padding oben rechts unten links
-
-.schulisches  {
-    font-size: 30px;
+padding oben rechts unten links .schulisches {
+  font-size: 30px;
 }
 
 .überschrift {
-    font-size: 30px;
-    color: blue;
-    font-weight: bold;
-    text-decoration: underline;
+  font-size: 20px;
+  color: blue;
+  font-weight: bold;
+  text-decoration: underline;
 }
 
 .kontakt-text {
-    font-size: small;
-    text-align: right; 
-    color:darkcyan;
+  font-size: small;
+  text-align: right;
+  color: darkcyan;
+  padding-left: 200px;
 }
 
+.navbar {
+  background-color: #00539cff;
+  height: 50px;
+  overflow: hidden;
+}
 
+.navbar a {
+  padding: 14px 16px;
+  text-decoration: none;
+  color: white;
+}
 
-  .navbar {
-    background-color: #333;
-    height: 50px;
-    overflow: hidden;
-    }
-    
-    .navbar a {
-    padding: 14px 16px;
-    text-decoration: none;
-    color: white;
-    }
+nav ul {
+  margin: 0px;
+  padding: 0px;
+}
 
-    nav ul {
-      margin: 0px;
-      padding: 0px;
-    }
+nav li {
+  list-style: none;
+}
 
-    nav li {
-      list-style: none;
-    }
+nav a {
+  display: block;
+  float: left;
+  height: 25px;
+}
 
-    nav a {
-      display: block;
-      float: left;
-      height: 20px;
-    }
+.dropdown {
+  float: left;
+  overflow: hidden;
+}
 
-    .dropdown {
-    float: left;
-    overflow: hidden;
-    }
-    
-    .navbar a:hover {
-      background-color: royalblue;
-      height: 22px;
-    }
+.navbar a:hover {
+  background-color: #eea47fff;
+  height: 22px;
+}
 
-  .dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #333;
-    min-width: 160px;
-    width: 60px;
-    margin-top: 50px;
-    }
-    
-    .dropdown-content a {
-    float: none;
-    color: white;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    text-align: left;
-    }
-    
-    .dropdown-content a:hover {
-    background-color: royalblue;
-    }
-    
-    .dropdown:hover .dropdown-content {
-    display: block;
-    }
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #00539cff;
+  min-width: 160px;
+  width: 60px;
+  margin-top: 50px;
+}
 
-    .contact {
-float: right
-    }
+.dropdown-content a {
+  float: none;
+  color: white;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+.dropdown-content a:hover {
+  background-color: #eea47fff;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+.contact {
+  float: right;
+}
 
 #aboutme {
-      padding-left: 30px;
-    }
+  padding-left: 30px;
+}
 
 li {
   font-size: large;
@@ -161,9 +153,40 @@ li {
 }
 
 .footer {
- background-color: lightgrey;
- width: 100%;
- position: relative;
- height: 100px;
- font-size: medium;
+  background-color: lightgrey;
+  width: 100%;
+  position: relative;
+  height: 100px;
+  font-size: medium;
+}
+
+::selection {
+  background-color: #eea47fff;
+}
+
+form {
+  width: fit-content;
+  margin: 0px auto;
+}
+
+form ul {
+  list-style: none;
+  padding: 5px;
+}
+form li {
+  margin-top: 20px;
+}
+
+label {
+  display: inline-block;
+  text-align: left;
+  width: 600px;
+}
+
+textarea {
+ padding-right: 100px;
+}
+
+#brot {
+  font-size: xx-large;
 }
