--- a/yachts/yachts.css
+++ b/yachts/yachts.css
@@ -1,24 +1,26 @@
 #seite {
-    width: 1200px;
-    font: icon;
-    margin: 0px auto;
+  width: fit-content;
+  font: icon;
+  margin: 0px auto;
+
 }
 
-
-
 p {
-    color: royalblue;
+    color: #7fc9ee;
     font-size: large;
-    text-decoration: underline;
     font-size: x-large;
-    
-    
-
   }
 
-
+  #inhalt {
+    padding-left: 30px;
+  }
+  
+  body {
+  font: icon;
+    }
+  
 h1 {
-    color: royalblue;
+    color: #255973;
     font-size: xx-large;
 }
 
@@ -27,90 +29,70 @@ h2 {
     font-size: x-large;
 }
 
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    
-
+.navbar {
+  background-color: #00539CFF;
+  height: 50px;
+  overflow: hidden;
+  }
+  
+  .navbar a {
+  padding: 14px 16px;
+  text-decoration: none;
+  color: white;
   }
 
-  li a {
+  nav ul {
+    margin: 0px;
+    padding: 0px;
+  }
+
+  nav li {
+    list-style: none;
+    font-size: large;
+  }
+
+  nav a {
     display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-  }
-  
-  li a:hover:not(.active) {
-    background-color: royalblue;
-  }
-  
-  .active {
-    background-color: royalblue;
-  }
-
-  .navbar {
-
-    background-color: #333;
-    height: 50px;
-    }
-    
-    .navbar a {
     float: left;
-    font-size: 16px;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
+    height: 20px;
+  }
+
+  .dropdown {
+  float: left;
+  overflow: hidden;
+  }
+  
+  .navbar a:hover {
+    background-color: #EEA47FFF;
     height: 22px;
-    }
-    
-    .dropdown {
-    float: left;
-    overflow: hidden;
-    }
-    
-    .dropdown .dropbtn {
-    font-size: 16px;  
-    border: none;
-    outline: none;
-    color: white;
-    background-color: inherit;
-    font-family: inherit;
-    margin: 0;
-    }
-    
+  }
 
-    
-  .dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #333;
-    min-width: 160px;
-    z-index: 5;
-    width: 60px;
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #00539CFF;
+  min-width: 160px;
+  width: 60px;
+  margin-top: 50px;
+  }
   
-    }
-    
-    .dropdown-content a {
-    float: none;
-    color: white;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    text-align: left;
-    }
-    
-    .dropdown-content a:hover {
-    background-color: #ddd;
-    }
-    
-    .dropdown:hover .dropdown-content {
-    display: block;
-    }
+  .dropdown-content a {
+  float: none;
+  color: white;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+  }
+  
+  .dropdown-content a:hover {
+  background-color: #EEA47FFF;
+  }
+  
+  .dropdown:hover .dropdown-content {
+  display: block;
+  }
+
 
     .contact {
 float: right
