--- a/styles.css
+++ b/styles.css
@@ -1,29 +1,49 @@
+::selection {
+  background-color: #EF8354;
+}
+
 #seite {
   width: fit-content;
-  font: icon;
   margin: 0px auto;
 }
 
 #inhalt {
   padding-left: 30px;
+  
+}
+
+#home_inhalt p{
+  padding-left: 30px;
+  font-size: x-large;
+}
+
+#home_inhalt ul li{
+  padding-left: 30px;
+  font-size: x-large;
+  list-style: none;
 }
 
 p {
-  color: black;
+  color: #2D3142;
+  font-size: medium;
 }
 
 body {
   font: icon;
+  background-color: #BFC0C0;
 }
 
 h1 {
-  color: cornflowerblue;
+  color: #4F5D75;
   padding-left: 30px;
-  font-size: xx-large;
+  font-size: 48px; 
+  text-decoration: underline;
+    text-decoration-color: #EF8354;
+
 }
 
 h2 {
-  color: royalblue;
+  color:#4F5D75;
   padding-left: 30px;
   font-size: x-large;
 }
@@ -77,7 +97,7 @@ padding oben rechts unten links .schulisches {
 }
 
 .navbar {
-  background-color: #00539cff;
+  background-color: #4F5D75;
   height: 50px;
   overflow: hidden;
 }
@@ -109,14 +129,14 @@ nav a {
 }
 
 .navbar a:hover {
-  background-color: #eea47fff;
+  background-color: #EF8354;
   height: 22px;
 }
 
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: #00539cff;
+  background-color: #4F5D75;
   min-width: 160px;
   width: 60px;
   margin-top: 50px;
@@ -132,7 +152,7 @@ nav a {
 }
 
 .dropdown-content a:hover {
-  background-color: #eea47fff;
+  background-color: #EF8354;
 }
 
 .dropdown:hover .dropdown-content {
@@ -143,8 +163,9 @@ nav a {
   float: right;
 }
 
-#aboutme {
+#aboutme li{
   padding-left: 30px;
+  font-size: medium;
 }
 
 li {
@@ -152,17 +173,9 @@ li {
   color: blue;
 }
 
-.footer {
-  background-color: lightgrey;
-  width: 100%;
-  position: relative;
-  height: 100px;
-  font-size: medium;
-}
 
-::selection {
-  background-color: #eea47fff;
-}
+
+
 
 form {
   width: fit-content;
@@ -177,6 +190,7 @@ form li {
   margin-top: 20px;
 }
 
+
 label {
   display: inline-block;
   text-align: left;
@@ -187,6 +201,24 @@ textarea {
  padding-right: 100px;
 }
 
-#brot {
-  font-size: xx-large;
+.footer {
+  background-color: #4F5D75;
+  width: 100%;
+  position: absolute;
+    position: relative;
+  height: 100px;
 }
+#footer_contact {
+  text-align: center;
+  font-size: large;
+  padding-top: 20px;
+}
+#footer_span {
+  text-align: center;
+  padding-top: 20px;
+}
+#footer_picture_left img {
+  width: 50px;
+  align-content: flex-start;
+}
+
