--- a/yachts/yachts.css
+++ b/yachts/yachts.css
@@ -11,7 +11,7 @@ p {
     font-size: x-large;
   }
 
-  #inhalt {
+  #seite {
     padding-left: 30px;
   }
   
@@ -103,7 +103,7 @@ float: right
     width: 70%;
 }
 
-#inhalt {
+#seite {
     padding-left: 30px;
     text-align: center;
 }
